# Neural-E-Commerce-Search

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EVIDENCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  demo_feedback.yml  feature_request.yml  reproduction.yml  validator_report.yml
.github/workflows/: ci.yml  release-assets.yml
configs/: bi_encoder.yaml  cross_encoder.yaml  pipeline.yaml
docs/: FORK_THE_LAB.md  _config.yml  architecture.md  catalog.json  catalog.schema.json  data.md  deployment.md  experiments.md  index.md  lab.html  releasing.md  reproducibility.md  training.md  trec-eval-format-errors.md  validate.html  validated-artifacts.md  validation.md
docs/articles/: trec-rank-advisory.md
docs/assets/: lab-core.mjs  lab.css  lab.js  neural_ecommerce_search_madhvansh-0.3.1-py3-none-any.whl
docs/compatibility/: matrix-v030.md  neural-search-v030.json  neural-search-v030.md  rankflow-v030.json  rankflow-v030.md  rankops-v030.json  rankops-v030.md
examples/validation/: sample.qrels  sample.run
harness/trec_eval_compat/: .gitattributes  README.md  SHA256SUMS.txt  run.py
harness/trec_eval_compat/results/: qrels-302.test__results-302.test.txt  qrels.123__results.test.txt  qrels.comment.test__results.comment.test.txt  qrels.comments.123__results.test.txt  qrels.rel_level__results.test.txt  qrels.test.with-comments__results.test.txt  qrels.test__results.test.txt  qrels.test__results.trunc.txt  summary.md
notebooks/: demo.ipynb
results/: README.md  manifest.schema.json
results/esci-task1-us/: STATUS.md  dataset.pin.json
scripts/: build_index.py  download_esci.py  offline_demo.py  run_baseline_bundle.py  run_eval.py  train_reranker.sh  train_retriever.sh  verify_release_manifest.py
src/necs/: __init__.py  config.py  demo.py  demo_catalog.json  validate.py
src/necs/api/: __init__.py  app.py  schemas.py
src/necs/data/: __init__.py  datasets.py  esci.py  hard_negatives.py  preprocess.py
src/necs/eval/: __init__.py  evaluate.py  metrics.py
src/necs/models/: __init__.py  bi_encoder.py  cross_encoder.py  pooling.py
src/necs/pipeline/: __init__.py  search.py
src/necs/retrieval/: __init__.py  bm25.py  index.py
src/necs/training/: __init__.py  losses.py  train_bi_encoder.py  train_cross_encoder.py
src/necs/utils/: __init__.py  logging.py  seed.py
tests/: browser_lab_smoke.mjs  test_action_metadata.py  test_config.py  test_datasets.py  test_demo.py  test_esci_protocol.py  test_evaluate.py  test_hard_negatives.py  test_metrics.py  test_pipeline.py  test_pooling.py  test_preprocess.py  test_release_candidate.py  test_release_manifest.py  test_run_eval.py  test_validate.py
