[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "necs"
version = "0.1.0"
description = "Two-stage retrieve-and-rank neural product search on Amazon ESCI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Madhvansh" }]
keywords = [
    "information-retrieval",
    "neural-search",
    "learning-to-rank",
    "bi-encoder",
    "cross-encoder",
    "deberta",
    "amazon-esci",
    "e-commerce",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls in arg defaults

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
